--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@reduxjs/toolkit": "^1.8.2",
     "@tabler/icons-react": "^3.1.0",
     "axios": "^1.7.5",
-    "formik": "^2.4.5",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "sweetalert2": "^11.4.17",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
