--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.8.2",
     "@tabler/icons-react": "^3.1.0",
     "axios": "^1.7.5",
+    "flowbite": "^3.1.2",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
